--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -125,29 +125,29 @@ jobs:
       - id: install-yq
         name: Install yq for modifying the eksctl yaml spec.
         run: |-
-          sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
-  # sudo wget https://github.com/mikefarah/yq/releases/download/v4.27.5/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+          sudo wget https://github.com/mikefarah/yq/releases/download/v4.27.5/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+      # sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+
+      # - id: fill-metadata
+      #   name: Add name and region to the eksctl file.
+      #   run: |-
+      #     yq w infra/cluster.yaml metadata.name "biomage-$CLUSTER_ENV" \
+      #     | yq w - metadata.region ${{ secrets.AWS_REGION }} \
+      #     > /tmp/cluster-$CLUSTER_ENV.yaml
+      #     cat /tmp/cluster-$CLUSTER_ENV.yaml
 
       - id: fill-metadata
         name: Add name and region to the eksctl file.
         run: |-
-          yq w infra/cluster.yaml metadata.name "biomage-$CLUSTER_ENV" \
-          | yq w - metadata.region ${{ secrets.AWS_REGION }} \
-          > /tmp/cluster-$CLUSTER_ENV.yaml
+          CLUSTER_NAME = "biomage-$CLUSTER_ENV"
+          yq -i '
+            .metadata.name = strenv(CLUSTER_NAME) |
+            .metadata.region = strenv(AWS_REGION)
+          ' infra/cluster.yaml
+          cp infra/cluster.yaml /tmp/cluster-$CLUSTER_ENV.yaml
           cat /tmp/cluster-$CLUSTER_ENV.yaml
-
-      # - id: fill-metadata-new
-      #   name: Add name and region to the eksctl file.
-      #   run: |-
-      #     CLUSTER_NAME = "biomage-$CLUSTER_ENV"
-      #     yq -i '
-      #       .metadata.name = strenv(CLUSTER_NAME) |
-      #       .metadata.region = strenv(AWS_REGION)
-      #     ' infra/cluster.yaml
-      #     cp infra/cluster.yaml /tmp/cluster-$CLUSTER_ENV.yaml
-      #     cat /tmp/cluster-$CLUSTER_ENV.yaml
-      #   env:
-      #     AWS_REGION: ${{ secrets.AWS_REGION }}
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
 
       # - id: install-eksctl
       #   name: Install eksctl
