--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -22,7 +22,7 @@ env:
 
 # this ensures that only one CI pipeline with the same key
 #  can run at once in order to prevent undefined states
-concurrency: cluster-update-mutex
+# concurrency: cluster-update-mutex
 
 jobs:
   setup:
