--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -549,30 +549,22 @@ jobs:
               --username $user
           done < "infra/cluster-access/${{matrix.environment-name}}/cluster_admins_$CLUSTER_ENV"
 
-      - id: setup-cluster-logging-cloudwatch-policy
-        name: Setup permissions to cluster to log to Cloudwatch
-        if: matrix.environment-name == 'Biomage'
+      - id: setup-fargate-logging
+        name: Setup logging for Fargate pods
+        if: ${{ steps.platform-monitoring-enabled.outputs.result == 'true'}}
         env:
           AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
         run: |-
+          # Setup permissions for Fargate pods to log to Cloudwatch
           LOGGING_POLICY_NAME="cluster-log-cloudwatch-policy"
 
           aws iam create-policy \
           --policy-name $LOGGING_POLICY_NAME \
           --policy-document infra/cluster-logging/cluster-log-cloudwatch-policy.json || true
 
-          echo "::set-output name=logging-policy-name::$LOGGING_POLICY_NAME"
-
-      - id: setup-fargate-logging
-        name: Setup logging for Fargate pods
-        if: matrix.environment-name == 'Biomage'
-        env:
-          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
-          LOGGING_POLICY_NAME: ${{ steps.setup-cluster-logging-cloudwatch-policy.outputs.logging-policy-name }}
-        run: |-
           # Create FluentBit config
-          sed -i 's/CLUSTER_ENV/${CLUSTER_ENV}/g' fargate-fluentbit-config.yaml > fargate-fluentbit-config.yaml
-          kubectl apply -f infra/fargate-logging/fargate-fluentbit-config.yaml
+          sed -i 's/CLUSTER_ENV/${CLUSTER_ENV}/g' infra/cluster-logging/fargate-fluentbit-config.yaml
+          kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
 
           # Attach role for pipeline and worker pods
           PIPELINE_POD_EXEC_ROLE=$(aws eks describe-fargate-profile \
