create namespace before configmap

--- a/infra/cluster-logging/fargate-fluentbit-config.yaml
+++ b/infra/cluster-logging/fargate-fluentbit-config.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: aws-observability
+----
 # Reference: https://docs.aws.amazon.com/eks/latest/userguide/fargate-logging.html
 apiVersion: v1
 kind: ConfigMap
