--- a/infra/cluster-logging/fargate-fluentbit-config.yaml
+++ b/infra/cluster-logging/fargate-fluentbit-config.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: aws-observability
+  labels:
+    aws-observability: enabled
 ----
 # Reference: https://docs.aws.amazon.com/eks/latest/userguide/fargate-logging.html
 apiVersion: v1
